# mat-props-remote

./: .dockerignore  Dockerfile  Dockerfile.front  README.md  docker-compose.yaml
back/: .env  .env.docker  Cargo.toml
back/src/: elastic_modules_for_unidirectional_composite_extra.rs  endianness.rs  main.rs  proto.rs
back/src/proto/: elastic_modules_for_honeycomb.rs  elastic_modules_for_unidirectional_composite.rs  mod.rs  thermal_conductivity_for_unidirectional_composite.rs  thermal_expansion_for_honeycomb.rs  thermal_expansion_for_unidirectional_composite.rs
front/: package-lock.json  package.json  vite.config.docker.ts  vite.config.ts
front/src/: App.tsx  index.css  remote-compute.ts  tauri.ts  util.ts
front/src/components/: NavBar.css  NavBar.tsx  SideMenu.tsx  SplitDiv.css  SplitDiv.tsx
front/src/components/component-windows/: Benchmark.tsx
front/src/xlsx-writer/: .eslintignore  Cargo.toml
front/src/xlsx-writer/src/: lib.rs
mat-props/: Cargo.toml
mat-props/src/: effective_properties.rs  elastic_modules_for_honeycomb.rs  elastic_modules_for_unidirectional_composite.rs  lib.rs  thermal_conductivity_for_unidirectional_composite.rs  thermal_expansion_for_honeycomb.rs  thermal_expansion_for_unidirectional_composite.rs
scripts/: test_elastic_modules_for_honeycomb.py  test_elastic_modules_for_unidirectional_composite.js  test_elastic_modules_for_unidirectional_composite.py  test_thermal_conductivity_for_unidirectional_composite.py  test_thermal_expansion_for_honeycomb.py  test_thermal_expansion_for_unidirectional_composite.py
(+6 files in other folders)
