[package]
name = "xlsx-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.66"
rust_xlsxwriter = { version = "0.60.0", features = ["wasm"] }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Window", "Document", "Element", "HtmlAnchorElement", "Blob", "BlobPropertyBag", "Url"] }

[lib]
crate-type = ["cdylib", "rlib"]
